k8s/kustomize/overlays/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-java-app
spec:
  replicas: 2
  template:
    spec:
      containers:
      - name: demo-java-app
        resources:
          requests:
            cpu: 1000m
            memory: 320M
          limits:
            cpu: 1000m
            memory: 320M
