k8s/kustomize/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.allow-http: "true"
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - host: ping.theonlydavidlee.com
    http:
      paths:
      - backend:
          serviceName: demo-java-app
          servicePort: 80
        path: /*
